@@ -699,9 +699,6 @@ t/data/autoqc/rna_seqc/data/17550_1#1.bam
 t/data/autoqc/rna_seqc/data/17550_3#8.bam
 t/data/autoqc/rna_seqc/samplesheet_17550.csv
 t/data/autoqc/sequence_error/6376_1_1.fastq.10000
-t/data/autoqc/st/batches/3432.xml
-t/data/autoqc/st/samples/3057.xml
-t/data/autoqc/st/studies/544.xml
 t/data/autoqc/tag_decode_output_no_found_tags.txt
 t/data/autoqc/tag_decode_output.txt
 t/data/autoqc/tag_decode_stats/6624_3_tag_decode_stats.json
@@ -710,8 +707,14 @@ t/data/autoqc/tag_metrics/6551_1.tag_metrics.json
 t/data/autoqc/tag_metrics/6954_1.tag_metrics.json
 t/data/autoqc/dbix_loader/is/12187_2.insert_size.json
 t/data/autoqc/population_snv_with_vcf/Anopheles_gambiae/default/Standard/PEST/test.vcf.gz
+t/data/autoqc/population_snv_with_vcf/Homo_sapiens/default/Standard/1000Genomes_hs37d5/test.vcf.gz
+t/data/autoqc/st/samples/1898.xml
+t/data/autoqc/st/batches/3432.xml
+t/data/autoqc/st/samples/3057.xml
 t/data/autoqc/st/samples/3056.xml
 t/data/autoqc/st/samples/9832.xml
+t/data/autoqc/st/studies/186.xml
+t/data/autoqc/st/studies/544.xml
 t/data/autoqc/tag_sets/sanger168.tags
 t/data/autoqc/tag_sets/sanger168_6.tags
 t/data/autoqc/tag_sets/sanger168_7.tags
