@@ -1,0 +1,32 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<sample api_version="0.6">
+  <id>1898</id>
+  <name>NA20537-TOS</name>
+  <study_id>186</study_id>
+  <properties>
+    <property>
+      <name>Organism</name>
+      <value>Human</value>
+    </property>
+    <property>
+      <name>GC content</name>
+      <value>Neutral</value>
+    </property>
+    <property>
+      <name>Public Name</name>
+      <value>NA20537</value>
+    </property>
+    <property>
+      <name>Common Name</name>
+      <value>Homo sapiens</value>
+    </property>
+    <property>
+      <name>TAXON ID</name>
+      <value>9606</value>
+    </property>
+    <property>
+      <name>Reference Genome</name>
+      <value/>
+    </property>
+  </properties>
+</sample>
