@@ -1,0 +1,72 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<study api_version="0.6">
+  <id>186</id>
+  <name>1000Genomes-B1-TOS</name>
+  <active>true</active>
+  <descriptors>
+    <descriptor>
+      <name>Study description</name>
+      <value>Some</value>
+    </descriptor>
+    <descriptor>
+      <name>Does this study contain samples that are contaminated with human DNA which must be removed prior to analysis?</name>
+      <value>No</value>
+    </descriptor>
+    <descriptor>
+      <name>Does this study require the removal of X chromosome and autosome sequence?</name>
+      <value>No</value>
+    </descriptor>
+    <descriptor>
+      <name>Does this study require y chromosome data to be separated from x and autosomal data before archival?</name>
+      <value>false</value>
+    </descriptor>
+    <descriptor>
+      <name>Title</name>
+      <value>Low coverage</value>
+    </descriptor>
+    <descriptor>
+      <name>Study Visibility</name>
+      <value>Public</value>
+    </descriptor>
+    <descriptor>
+      <name>Do any of the samples in this study contain human DNA?</name>
+      <value>Yes</value>
+    </descriptor>
+    <descriptor>
+      <name>Are all the samples to be used in this study commercially available, unlinked anonymised cell-lines?</name>
+      <value>No</value>
+    </descriptor>
+    <descriptor>
+      <name>Study name abbreviation</name>
+      <value/>
+    </descriptor>
+    <descriptor>
+      <name>What is the data release strategy for this study?</name>
+      <value>open</value>
+    </descriptor>
+    <descriptor>
+      <name>Will you be using WTSI's standard access agreement?</name>
+      <value/>
+    </descriptor>
+    <descriptor>
+      <name>How is the data release to be timed?</name>
+      <value>never</value>
+    </descriptor>
+    <descriptor>
+      <name>Reason for delaying release</name>
+      <value/>
+    </descriptor>
+    <descriptor>
+      <name>Delay for</name>
+      <value/>
+    </descriptor>
+    <descriptor>
+      <name>Alignments in BAM</name>
+      <value>true</value>
+    </descriptor>
+    <descriptor>
+      <name>Reference Genome</name>
+      <value>Homo_sapiens (SOME_OR_OTHER)</value>
+    </descriptor>
+  </descriptors>
+</study>
