@@ -1,5 +1,9 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - genotype and verify_bam_id checks:
+     speed up pipeline job submission for deeply plexed lanes by
+     moving calls that involde access to reference repository out of the
+     can_run method
  - composition-based autoqc results db search via DBIx: allow for
    a search query that contains fields from the main table
 
